# macao-weather-xml-to-markdown

./: README.md  pyproject.toml  weather_markdown.py
templates/: default_en.md  default_pt.md  default_template.md  detailed_en.md  detailed_pt.md  detailed_template.md  minimal_pt.md  minimal_template.md
