[project]
name = "macao-weather-xml-to-markdown"
version = "0.2.0"
description = "Convert Macau weather XML data to markdown with customizable templates and multi-language support"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
]